force-app/main/default/objects/Egg__c/fields/Clinic_Exported_To__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Exported_To__c</fullName>
    <description>The clinic that the bio-sample is being exported to.</description>
    <label>Clinic Exported To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>