force-app/main/default/objects/Egg__c/fields/Survival__c.field-meta.xml
<CustomField>
    <fullName>Survival__c</fullName>
    <label>Survival</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MII</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>Deg</fullName>
            </value>
            <value>
                <fullName>RZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>